Update color JLI

--- a/chabad-little-neck/style.css
+++ b/chabad-little-neck/style.css
@@ -64,7 +64,7 @@ body.cco_body #header_branding {
 }
 
 #jli-promo {
-  background: black;
+  background: #ff5f00;
   margin-bottom: 15px;
   display: flex;
 }
