Update JLI color

--- a/chabad-little-neck/style.css
+++ b/chabad-little-neck/style.css
@@ -64,7 +64,7 @@ body.cco_body #header_branding {
 }
 
 #jli-promo {
-  background: #ff5f00;
+  background: #e4753a;
   margin-bottom: 15px;
   display: flex;
 }
