--- a/chabad-northbrook/raffle.css
+++ b/chabad-northbrook/raffle.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Raleway&display=swap');
 
+.co_body .content .form-all li {
+  font-family: 'Raleway', sans-serif;
+}
+
+form[id='4434106'] button {
+  font-family: 'Montserrat', sans-serif;
+}
+
 form[id='4434106'] .form-label-auto label, form[id='4434106'] .form-label-top label, form[id='4434106'] .form-label-left label, form[id='4434106'] .form-label-right label {
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
