--- a/chabad-northbrook/raffle.css
+++ b/chabad-northbrook/raffle.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Raleway&display=swap');
 
-.co_body .content .form-all li {
+.aid-4434106 .co_body .content .form-all li {
   font-family: 'Raleway', sans-serif;
 }
 
+.aid-4434106 .article-header h1,
 form[id='4434106'] button {
   font-family: 'Montserrat', sans-serif;
 }
