--- a/chabad-northbrook/raffle.css
+++ b/chabad-northbrook/raffle.css
@@ -2,6 +2,7 @@
 
 .aid-4434106 .co_body .content .form-all li {
   font-family: 'Raleway', sans-serif;
+  font-size: 16px;
 }
 
 .aid-4434106 .article-header h1,
