--- a/chabad-northbrook/raffle.css
+++ b/chabad-northbrook/raffle.css
@@ -5,6 +5,10 @@
   font-size: 16px;
 }
 
+.aid-4434106 div#text_21 p {
+  font-family: 'Raleway', sans-serif;
+}
+
 .aid-4434106 header.article-header.cf {
   display: none;
 }
