--- a/jewish-orlando/style.css
+++ b/jewish-orlando/style.css
@@ -1,7 +1,7 @@
 /* TOP LINKS, SITE HEADER IMAGE etc. */
 
 body {
-  background: url("https://www.jewishorlando.com./media/images/877/KCiS8772056.jpg") !important;
+  background: url("https://www.jewishorlando.com/media/images/877/KCiS8772056.jpg") !important;
   background-size: cover !important;
   background-attachment: fixed !important;
 }
