--- a/jewish-orlando/building-style.css
+++ b/jewish-orlando/building-style.css
@@ -52,7 +52,7 @@ body {
 }
 #chabad_head .chabad_header {
   border-top: medium none;
-  height: 210px;
+  /*height: 210px;*/
   border-right: medium none;
   border-bottom: medium none;
   border-left: medium none;
@@ -216,7 +216,7 @@ _height:23px;*/
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 form[id="5724146"] #cid_1 label,
@@ -234,10 +234,10 @@ form[id="5724146"] #id_4 {
   margin-bottom: 10px;
 }
 
-.form-label-auto label,
-.form-label-top label,
-.form-label-left label,
-.form-label-right label {
+form[id="5724146"] .form-label-auto label,
+form[id="5724146"] .form-label-top label,
+form[id="5724146"] .form-label-left label,
+form[id="5724146"] .form-label-right label {
   text-transform: uppercase;
   font-size: 24px;
   letter-spacing: 3px;
@@ -252,7 +252,17 @@ form[id="5724146"] #id_4 {
   margin-left: -36px;
 }
 
-.form-line {
+@media (max-width: 650px) {
+  form[id="5724146"] .form-label-auto label,
+form[id="5724146"] .form-label-top label,
+form[id="5724146"] .form-label-left label,
+form[id="5724146"] .form-label-right label {
+  width: 100%;
+  margin-left: 0;
+  }
+}
+
+form[id="5724146"] .form-line {
   background-color: #f5efea;
   width: 600px;
   margin: 20px auto;
