--- a/chabad-cary/style.css
+++ b/chabad-cary/style.css
@@ -57,6 +57,7 @@
 span.footer-title,
 .banner .widget_content.index_format .item .title,
 .banner .widget_content.index_format .item .title a,
+.co_body .article-body li,
 .branding-search #header_branding .site_title {
   font-family: var(--font-sans-serif);
 }
@@ -450,8 +451,9 @@ body.cco_body.sites-article #tabContentMain .co_menu_item.hover span.parent a {
   color: var(--color-black);
 }
 .co_menu_item .co_menu_content {
-  top: 0px;
-  padding-top: 65px;
+  /* top: 0px;
+  padding-top: 65px; */
+  top: 65px;
 }
 .co_submenu_container {
   opacity: 1 !important;
@@ -612,11 +614,19 @@ body.cco_body
   width: 100%;
   border-radius: 20px;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 55.26%, #000 100%),
-    url("https://cdn.webmk.co/chabad-cary/assets/hero_image.jpg") center center / cover
-      no-repeat;
+    url("https://cdn.webmk.co/chabad-cary/assets/hero_image.jpg") center center /
+      cover no-repeat;
   /* background: linear-gradient(180deg, rgba(0, 0, 0, 0) 55.26%, #000 100%),
     url("/hero_image-min.jpg") center center / cover
       no-repeat; */
+}
+
+@media (max-width: 650px) {
+  .slide_wrapper a {
+    background-image: url(https://cdn.webmk.co/chabad-cary/assets/building-render.jpg);
+    background-position: 30% bottom;
+    background-size: 400%;
+  }
 }
 .hp-table .hp-row-first .promo_slider .slider .slides .slide_wrapper img {
   mix-blend-mode: normal !important;
@@ -656,7 +666,7 @@ body.cco_body
   font-size: 25px;
   font-family: var(--font-sans-serif);
 }
-.hp-table .hp-row-first .promo_slider .slider .cycle-caption p::before {
+/* .hp-table .hp-row-first .promo_slider .slider .cycle-caption p::before {
   content: "";
   position: absolute;
   height: 2px;
@@ -664,8 +674,8 @@ body.cco_body
   background: var(--color-orange);
   top: -30px;
   left: -80px;
-}
-.hp-table .hp-row-first .promo_slider .slider .cycle-caption::before {
+} */
+/* .hp-table .hp-row-first .promo_slider .slider .cycle-caption::before {
   content: "";
   position: absolute;
   height: calc(100% + 40px);
@@ -674,8 +684,8 @@ body.cco_body
   top: -20px;
   left: 68%;
   z-index: -1;
-}
-.hp-table .hp-row-first .promo_slider .slider .cycle-caption p::after {
+} */
+/* .hp-table .hp-row-first .promo_slider .slider .cycle-caption p::after {
   content: "";
   position: absolute;
   height: 20px;
@@ -683,7 +693,8 @@ body.cco_body
   background: white;
   top: -40px;
   left: calc(68% + 12px);
-}
+} */
+
 .hp-table .hp-row-first .promo_slider .slider .cycle-caption big {
   left: 0;
   transform: translateX(0);
@@ -1604,7 +1615,7 @@ body.sites-article #content {
 .co_body.article-body.cf {
   position: relative;
   font-size: 18px;
-  width: 65%;
+  /* width: 65%; */
   color: var(--color-grey);
   line-height: 1.3;
   letter-spacing: 0.2px;
@@ -2949,4 +2960,27 @@ body.sites-article #content {
   .co_menu_item span.parent {
     width: auto;
   }
+}
+
+.footer3:after {
+  content: "100% of all donations benefit Chabad of Cary · Morrisville Jewish Center";
+  margin-top: 20px;
+  display: block;
+  font-style: italic;
+  font-size: 15px;
+  font-family: var(--font-sans-serif);
+}
+
+
+/* hide 3rd level nested menu */
+.dir_ltr .co_menu_item.multi_level .co_submenu_container a.item img.arrow, .dir_ltr .co_menu_item.multi_level .co_submenu_container a.item:hover img.arrow {
+  border-left: 0;
+}
+
+.dir_ltr .co_menu_item.multi_level .co_submenu_container.reversed a.item img.arrow, .dir_rtl .co_menu_item.multi_level .co_submenu_container a.item img.arrow {
+  border-right: 0;
+}
+
+.co_menu_item .co_submenu_container .menu_child.selected {
+  display: none;
 }
