--- a/Chabad-maine/style.css
+++ b/Chabad-maine/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Sequel Sans";
-  src: url("https://manks-dev.b-cdn.net/Sequel%20Sans%20Light%20Disp.woff");
+  src: url("https://cheder-sheini.github.io/website/assets/fonts/Sequel%20Sans%20Light%20Disp.woff");
   font-weight: 300;
 }
 @font-face {
